--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node build/app.js",
     "start:dev": "ts-node-dev src/index.ts",
     "start:debug": "ts-node --files src/index.ts --inspect",
+    "start:doc":"apidoc -i src -o apidoc",
     "test": "test"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-paginate": "^5.0.12",
+    "@types/node": "^18.7.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
@@ -38,14 +40,17 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "helmet": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "mongoose-paginate-v2": "^1.7.0",
+    "nodemailer": "^6.7.8",
     "path": "^0.12.7"
   }
 }
